--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:theme="@style/Theme.Bootcamp"
         tools:targetApi="31">
         <activity
+            android:name=".NavigationDrawer"
+            android:exported="false"
+            android:label="@string/title_activity_navigation_drawer"
+            android:theme="@style/Theme.Bootcamp.NoActionBar" />
+        <activity
             android:name=".GreetActivity"
             android:exported="false" />
         <activity
