Add firebase configuration and libraries

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,8 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    // repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
@@ -28,5 +29,5 @@ buildCache {
     }
 }
 
-rootProject.name = "Bootcamp"
+rootProject.name = "StudHub"
 include ':app'
