--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 }
 
 allprojects {
