--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Bootcamp"
         tools:targetApi="31">
         <activity
+            android:name=".AuthActivity"
+            android:exported="true" />
+        <activity
             android:name=".FirebaseActivity"
             android:exported="false" />
         <activity
