--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 buildscript {
+    ext {
+        compose_ui_version = '1.3.3'
+        m3_version = '1.0.1'
+        m2_version = '1.3.1'
+    }
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
@@ -18,6 +23,7 @@ plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
 
 allprojects {
