--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.Bootcamp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".HomePageActivity"
             android:exported="true"
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme.Bootcamp" />
