--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "androidx.compose.material:material:1.3.1"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.3.3'
+    implementation 'androidx.compose.ui:ui-tooling:1.3.3'
     implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
 
 
