--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bootcamp"
         tools:targetApi="31">
+        <activity
+            android:name=".RegisterUserActivity"
+            android:exported="true"
+            android:label="@string/title_activity_register_user"
+            android:theme="@style/Theme.Bootcamp" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -21,11 +26,11 @@
              Once you have your API key (it starts with "AIza"), define a new property in your
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
+        -->
         <activity
             android:name=".MapsActivity"
             android:exported="false"
@@ -46,4 +51,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
