--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /.idea/assetWizardSettings.xml
 /.idea/codeStyles/Project.xml
 /.idea/codeStyles/codeStyleConfig.xml
+/.idea/androidTestResultsUserPreferences.xml
 .DS_Store
 /build
 /captures
