fixed issues with tests

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,13 @@
              Once you have your API key (it starts with "AIza"), define a new property in your
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-
+        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-        -->
         <activity
             android:name=".GreetActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_greet"
             android:theme="@style/Theme.Bootcamp" />
         <activity
