--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /.idea/codeStyles/Project.xml
 /.idea/codeStyles/codeStyleConfig.xml
 /.idea/androidTestResultsUserPreferences.xml
+/.idea/deploymentTargetDropDown.xml
 .DS_Store
 /build
 /captures
