--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bootcamp"
         tools:targetApi="31">
-        <activity  
+        <activity
+            android:name=".CreateListingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_create_listing"
+            android:theme="@style/Theme.Bootcamp" />
+        <activity
             android:name=".RegisterUserActivity"
             android:exported="true"
             android:label="@string/title_activity_register_user"
@@ -30,6 +35,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
+
         <activity
             android:name=".MapsActivity"
             android:exported="false"
@@ -48,7 +54,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
