--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,6 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 
 org.gradle.daemon=true
-org.gradle.caching=true
+org.gradle.caching=false
 org.gradle.parallel=true
 org.gradle.configureondemand=true
