--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bootcamp"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".DetailedListingView"
+            android:exported="false"
+            android:label="@string/title_activity_detailed_listing_view"
+            android:theme="@style/Theme.Bootcamp" />
         <activity
             android:name=".CreateListingActivity"
             android:exported="false"
@@ -52,7 +57,7 @@
             android:theme="@style/Theme.Bootcamp" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
