--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,10 @@ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
     id 'jacoco'
+    id "kotlin-kapt"
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
     id 'org.jetbrains.kotlin.android'
+    id "dagger.hilt.android.plugin"
 }
 
 android {
@@ -67,8 +69,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material3:material3:$m3_version"
     implementation "androidx.compose.material:material-icons-core:$m2_version"
-    implementation "androidx.navigation:navigation-compose:2.6.0-alpha07"
+    // implementation "androidx.navigation:navigation-compose:2.6.0-alpha07"
     implementation 'androidx.navigation:navigation-testing:2.5.3'
+    implementation 'androidx.compose.material:material:1.3.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -77,6 +80,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
     androidTestImplementation 'org.mockito:mockito-android:3.12.4'
     androidTestImplementation "org.mockito:mockito-core:3.12.4"
+
+    //Navigation Compose
+    implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
+    //Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 
     // Import the Firebase BoM
@@ -92,6 +101,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
 }
 
