--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
         compose_ui_version = '1.3.3'
         m3_version = '1.0.1'
         m2_version = '1.3.1'
+        hilt_version = '2.44.2'
+        hilt_navigation_compose_version = '1.0.0'
     }
     repositories {
         // Make sure that you have the following two repositories
@@ -14,6 +16,7 @@ buildscript {
     dependencies {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
     }
 }
