--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:name=".StudHubApp"
@@ -11,7 +11,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bootcamp"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".DetailedListingView"
+            android:exported="false"
+            android:label="@string/title_activity_detailed_listing_view"
+            android:theme="@style/Theme.Bootcamp" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,6 +30,11 @@
             android:name=".CreateListingActivity"
             android:exported="false"
             android:label="@string/title_activity_create_listing"
+            android:theme="@style/Theme.Bootcamp" />
+        <activity
+            android:name=".BrowseActivity"
+            android:exported="false"
+            android:label="@string/title_activity_browse"
             android:theme="@style/Theme.Bootcamp" />
         <activity
             android:name=".RegisterUserActivity"
