--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name=".StudHubApp"
@@ -11,10 +11,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bootcamp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -48,10 +49,17 @@
             android:name=".MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
+
+
         <activity
-            android:name=".GreetActivity"
-            android:exported="true"
-            android:label="@string/title_activity_greet"
+            android:name=".wrapper.HomeActivity"
+            android:exported="false"
+            android:label="HomeComponent Wrapper"
+            android:theme="@style/Theme.Bootcamp" />
+        <activity
+            android:name=".wrapper.NavigationActivity"
+            android:exported="false"
+            android:label="AppNavigation Wrapper"
             android:theme="@style/Theme.Bootcamp" />
     </application>
 
