Tests utilities for Profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,11 @@
             android:exported="false"
             android:label="About Wrapper"
             android:theme="@style/Theme.Bootcamp" />
+        <activity
+            android:name=".wrapper.ProfileActivity"
+            android:exported="false"
+            android:label="Profile Wrapper"
+            android:theme="@style/Theme.Bootcamp" />
     </application>
 
 </manifest>
