--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,6 +150,8 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
             '**/org/jetbrains/**',
             '**/kotlin/**',
             '**/META-INF/**',
+            // Wrapper activities
+            '**/wrapper/**',
             // HILT
             '**/di/**.*',
             '**/*Hilt*.*',
