--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     // implementation "androidx.navigation:navigation-compose:2.6.0-alpha07"
     implementation 'androidx.navigation:navigation-testing:2.5.3'
     implementation 'androidx.compose.material:material:1.3.1'
+    androidTestImplementation "io.mockk:mockk-android:1.12.0"
     androidTestImplementation "io.mockk:mockk:1.12.0"
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
