--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,8 @@ android {
 }
 
 dependencies {
-        implementation 'com.google.android.libraries.places:places:2.5.0'
+    implementation("androidx.compose.runtime:runtime-livedata:1.4.2")
+    implementation 'com.google.android.libraries.places:places:3.1.0'
     implementation "com.google.android.gms:play-services-maps:18.1.0"
     implementation "com.google.android.gms:play-services-location:21.0.1"
     implementation "com.google.android.gms:play-services-wearable:18.0.0"
@@ -79,15 +80,15 @@ dependencies {
     androidTestImplementation"com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation "com.google.maps.android:maps-compose:2.2.0"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
-    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material3:material3:$m3_version"
