--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,5 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 android.enableDexingArtifactTransform=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
