Deleted MapsActivity, secured hardcoded API key, modularized onCreate code.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,9 +37,10 @@
             </intent-filter>
         </activity>
 
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCxsRHWa5Wo_wLLq91ndpQmXi3JedpSpZc" />
+            android:value="${MAPS_API_KEY}" />
 
 
         <activity
