--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Bootcamp"
+        android:theme="@style/Theme.Studhub"
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.gms.version"
@@ -50,32 +50,42 @@
             android:name=".wrapper.HomeActivity"
             android:exported="false"
             android:label="HomeComponent Wrapper"
-            android:theme="@style/Theme.Bootcamp" />
+            android:theme="@style/Theme.Studhub" />
         <activity
             android:name=".wrapper.NavigationActivity"
             android:exported="false"
             android:label="AppNavigation Wrapper"
-            android:theme="@style/Theme.Bootcamp" />
+            android:theme="@style/Theme.Studhub" />
+        <activity
+            android:name=".wrapper.ChatActivity"
+            android:exported="false"
+            android:label="Chat Wrapper"
+            android:theme="@style/Theme.Studhub" />
+        <activity
+            android:name=".wrapper.ConversationActivity"
+            android:exported="false"
+            android:label="Conversation Wrapper"
+            android:theme="@style/Theme.Studhub" />
         <activity
             android:name=".wrapper.AboutActivity"
             android:exported="false"
             android:label="About Wrapper"
-            android:theme="@style/Theme.Bootcamp" />
+            android:theme="@style/Theme.Studhub" />
         <activity
             android:name=".wrapper.ProfileActivity"
             android:exported="false"
             android:label="Profile Wrapper"
-            android:theme="@style/Theme.Bootcamp" />
+            android:theme="@style/Theme.Studhub" />
         <activity
             android:name=".wrapper.EditProfileActivity"
             android:exported="false"
             android:label="Edit Profile Wrapper"
-            android:theme="@style/Theme.Bootcamp" />
+            android:theme="@style/Theme.Studhub" />
         <activity
             android:name=".wrapper.AuthActivity"
             android:exported="false"
             android:label="Auth Wrapper"
-            android:theme="@style/Theme.Bootcamp" />
+            android:theme="@style/Theme.Studhub" />
     </application>
 
 </manifest>
