Modify report_codeclimate_script task in .cirrus.yml

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -45,6 +45,7 @@ check_android_task:
   report_codeclimate_script: |
     export JACOCO_SOURCE_PATH=app/src/main/java/
     ./cc-test-reporter format-coverage ./app/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml --input-type jacoco
+    sed -i -e 's/null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,//g' ./coverage/codeclimate.json
     ./cc-test-reporter upload-coverage
   lint_script:
     ./gradlew lintDebug
