Added tests to increase coverage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,6 +119,11 @@
             android:label="Edit Profile Wrapper"
             android:theme="@style/Theme.Studhub" />
         <activity
+            android:name=".wrapper.ProfileBlockedActivity"
+            android:exported="false"
+            android:label="Profile Blocked Wrapper"
+            android:theme="@style/Theme.Studhub" />
+        <activity
             android:name=".wrapper.AuthActivity"
             android:exported="false"
             android:label="Auth Wrapper"
